--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -1,5 +1,10 @@
+accounts=Accounts
+activateOnlyWhenMinimized=Activate only when minimized
 addSubcontact=Add subcontact
 all=All
+alwaysOnTop=Always on top
+appearance=Appearance
+application=Application
 callList=Call list
 cancel=Cancel
 close=Close
@@ -11,16 +16,20 @@ dial=Dial
 doNotAskAgain=Don't ask again
 edit=Edit
 emptyHistory=Empty history
+enableNotifications=Enable notifications
 extendedCriteria=Extended criteria
+general=General
 file=File
 first=First
 help=Help
 history=History
 hour=Hour
 last=Last
+launchOnStartUp=Launch on start up
 moveToGroup=Move to group
 next=Next
 no=No
+notifications=Notifications
 paste=Paste
 previous=Previous
 print=Print
@@ -37,6 +46,8 @@ settings=Settings
 sipCommunicator=SIPCommunicator
 today=Today
 tools=Tools
+updateAutomatically=Automatically install new updates
+updates=Updates
 userInfo=User info
 view=View
 viewHistory=View history
