some strings added to the internationalization properties files
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@128 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -30,6 +30,7 @@ moveToGroup=Move to group
 next=Next
 no=No
 notifications=Notifications
+passwd=password
 paste=Paste
 previous=Previous
 print=Print
@@ -46,6 +47,7 @@ settings=Settings
 sipCommunicator=SIPCommunicator
 today=Today
 tools=Tools
+uin=UIN
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=User info
