*** empty log message ***
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@166 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -26,11 +26,12 @@ history=History
 hour=Hour
 last=Last
 launchOnStartUp=Launch on start up
+login=Login
 moveToGroup=Move to group
 next=Next
 no=No
 notifications=Notifications
-passwd=password
+passwd=Password:
 paste=Paste
 previous=Previous
 print=Print
@@ -47,7 +48,7 @@ settings=Settings
 sipCommunicator=SIPCommunicator
 today=Today
 tools=Tools
-uin=UIN
+uin=UIN:
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=User info
