new strings added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@174 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -5,9 +5,11 @@ all=All
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
+authenticationFailed=Authentication failed
 callList=Call list
 cancel=Cancel
 close=Close
+connectionFailed=Connection failed
 contacts=Contacts
 copy=Copy
 cut=Cut
