*** empty log message ***
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@183 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -37,6 +37,7 @@ passwd=Password:
 paste=Paste
 previous=Previous
 print=Print
+protocol=Protocol
 quit=Quit
 remove=Remove
 removeContact=Remove contact
