new i18n strings added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@191 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -10,6 +10,7 @@ callList=Call list
 cancel=Cancel
 close=Close
 connectionFailed=Connection failed
+connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
 contacts=Contacts
 copy=Copy
 cut=Cut
@@ -21,6 +22,7 @@ emptyHistory=Empty history
 enableNotifications=Enable notifications
 extendedCriteria=Extended criteria
 general=General
+generalError=General error
 file=File
 first=First
 help=Help
@@ -30,6 +32,7 @@ last=Last
 launchOnStartUp=Launch on start up
 login=Login
 moveToGroup=Move to group
+networkFailure=Network failure
 next=Next
 no=No
 notifications=Notifications
@@ -49,6 +52,8 @@ sendFile=Send file
 sendMessage=Send message
 settings=Settings
 sipCommunicator=SIPCommunicator
+statusChangeGeneralError=The status could not be changed due to a general application error.
+statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
 today=Today
 tools=Tools
 uin=UIN:
