new i18n strings added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@331 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -12,6 +12,7 @@ close=Close
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
 contacts=Contacts
+continue=Continue
 copy=Copy
 cut=Cut
 date=Date
@@ -20,6 +21,7 @@ doNotAskAgain=Don't ask again
 edit=Edit
 emptyHistory=Empty history
 enableNotifications=Enable notifications
+exit=Exit
 extendedCriteria=Extended criteria
 general=General
 generalError=General error
