typing notifications implemented
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@380 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -11,6 +11,9 @@ cancel=Cancel
 close=Close
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
+contactPausedTyping=paused typing the message
+contactTyping=is typing a message
+contactTypingStateStale=typing state not updated
 contacts=Contacts
 continue=Continue
 copy=Copy
@@ -59,6 +62,7 @@ statusChangeNetworkFailure=The status could not be changed due to a network \n f
 today=Today
 tools=Tools
 uin=UIN:
+unknown=Unknown user
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=User info
