Menu item changed
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@386 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -66,7 +66,6 @@ unknown=Unknown user
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=User info
-view=View
 viewHistory=View history
 warning=Warning
 yes=Yes
@@ -74,6 +73,6 @@ yesterday=Yesterday
 
 mnemonic.file=F
 mnemonic.tools=T
-mnemonic.view=V
+mnemonic.settings=S
 mnemonic.help=H
 
