re-login after auth. failed contains wrong account id. - Fixed
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@394 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -5,7 +5,7 @@ all=All
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
-authenticationFailed=Authentication failed
+authenticationFailed=Authentication failed. The UIN or password you entered are not valid. 
 callList=Call list
 cancel=Cancel
 close=Close
