--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -37,6 +37,9 @@ last=Last
 launchOnStartUp=Launch on start up
 login=Login
 moveToGroup=Move to group
+msgDeliveryFailure=Message delivery failure
+msgNotDelivered=Message to ? could not be delivered due to a network problem.
+msgSendConnectionProblem=You are currently offline. Check your network connection. 
 networkFailure=Network failure
 next=Next
 no=No
