Add tooltips to all buttons.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@410 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -1,14 +1,17 @@
 accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
+addContact=Add contact
 addSubcontact=Add subcontact
 all=All
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
 authenticationFailed=Authentication failed. The UIN or password you entered are not valid. 
+call=Call
 callList=Call list
 cancel=Cancel
 close=Close
+configure=Configure
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
 contactPausedTyping=paused typing the message
@@ -30,6 +33,7 @@ general=General
 generalError=General error
 file=File
 first=First
+font=Font
 help=Help
 history=History
 hour=Hour
@@ -59,7 +63,9 @@ send=Send
 sendFile=Send file
 sendMessage=Send message
 settings=Settings
+showOfflineUsers=Show offline users
 sipCommunicator=SIPCommunicator
+smily=Smily
 statusChangeGeneralError=The status could not be changed due to a general application error.
 statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
 today=Today
