ongoing work on url recognition
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@414 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -37,6 +37,7 @@ font=Font
 help=Help
 history=History
 hour=Hour
+insertSmiley=Insert smiley
 last=Last
 launchOnStartUp=Launch on start up
 login=Login
@@ -65,7 +66,6 @@ sendMessage=Send message
 settings=Settings
 showOfflineUsers=Show offline users
 sipCommunicator=SIPCommunicator
-smily=Smily
 statusChangeGeneralError=The status could not be changed due to a general application error.
 statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
 today=Today
