The warning message shown to user when chat message delivery has failed is changed.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@466 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -44,7 +44,7 @@ login=Login
 moveToGroup=Move to group
 msgDeliveryFailure=Message delivery failure
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
-msgSendConnectionProblem=You are currently offline. Check your network connection. 
+msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline. Check your network connection. 
 networkFailure=Network failure
 next=Next
 no=No
