Show message to the user when disconnected.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@474 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -14,6 +14,7 @@ close=Close
 configure=Configure
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
+connectionExpiredMessage=You are currently disconnected from the ? server.
 contactPausedTyping=paused typing the message
 contactTyping=is typing a message
 contactTypingStateStale=typing state not updated
@@ -72,6 +73,7 @@ today=Today
 tools=Tools
 uin=UIN:
 unknown=Unknown user
+unregisteredMessage=You have been disconnected from the ? server. Please check your network connection.
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=User info
