typing notification messages get dinamically the name of the user
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@520 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -15,8 +15,8 @@ configure=Configure
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
 connectionExpiredMessage=You are currently disconnected from the ? server.
-contactPausedTyping=paused typing the message
-contactTyping=is typing a message
+contactPausedTyping=? paused typing the message
+contactTyping=? is typing a message
 contactTypingStateStale=typing state not updated
 contacts=Contacts
 continue=Continue
