Bug fixed: "Proper handle DISCCONECT event in the GUI"
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@522 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -28,6 +28,7 @@ doNotAskAgain=Don't ask again
 edit=Edit
 emptyHistory=Empty history
 enableNotifications=Enable notifications
+error=Error
 exit=Exit
 extendedCriteria=Extended criteria
 general=General
@@ -41,14 +42,17 @@ hour=Hour
 insertSmiley=Insert smiley
 last=Last
 launchOnStartUp=Launch on start up
+limitReachedForIp=You have too many existing registrations from the local IP address and the ? server doesn't allow to open any more of them.
 login=Login
 moveToGroup=Move to group
 msgDeliveryFailure=Message delivery failure
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
-msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline. Check your network connection. 
+msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline. Check your network connection.
+multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected. 
 networkFailure=Network failure
 next=Next
 no=No
+nonExistingUserId=The ? server does not recognize specified user id.
 notifications=Notifications
 passwd=Password:
 paste=Paste
@@ -56,6 +60,7 @@ previous=Previous
 print=Print
 protocol=Protocol
 quit=Quit
+reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again. 
 remove=Remove
 removeContact=Remove contact
 renameContact=Rename contact
