"escape on a non - empty message window should trigger a warning"
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@526 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -52,7 +52,7 @@ multipleLogins=You have logged in more than once with the same account. ? accoun
 networkFailure=Network failure
 next=Next
 no=No
-nonEmptyChatWindowClose=You're trying to close a non empty chat. Are you sure you want to close this chat?
+nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The ? server does not recognize specified user id.
 notifications=Notifications
 passwd=Password:
