"Clsing a window shortly after a new msg should trigger a warning" - Done.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@527 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -11,6 +11,7 @@ call=Call
 callList=Call list
 cancel=Cancel
 close=Close
+closeChatAfterNewMsg=You have received a message in last 5 seconds. Are you sure you want to close this chat?
 configure=Configure
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
