--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -11,7 +11,7 @@ call=Call
 callList=Call list
 cancel=Cancel
 close=Close
-closeChatAfterNewMsg=You have received a new message in last 2 seconds. Are you sure you want to close this chat?
+closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 configure=Configure
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
