--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -22,6 +22,7 @@ contactTypingStateStale=typing state not updated
 contacts=Contacts
 continue=Continue
 copy=Copy
+copyLink=Copy link
 cut=Cut
 date=Date
 dial=Dial
