message text changed
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@578 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -6,7 +6,7 @@ all=All
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
-authenticationFailed=Authentication failed. The UIN or password you entered are not valid. 
+authenticationFailed=Authentication failed. The password you entered is not valid. 
 call=Call
 callList=Call list
 cancel=Cancel
