Turn on/off outgoing typing notifications
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@626 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -80,6 +80,7 @@ statusChangeGeneralError=The status could not be changed due to a general applic
 statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
 today=Today
 tools=Tools
+typingNotifications=Typing notifications
 uin=UIN:
 unknown=Unknown user
 unregisteredMessage=You have been disconnected from the ? server. Please check your network connection.
