right click menu enhancements
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@628 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -58,6 +58,7 @@ no=No
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The ? server does not recognize specified user id.
 notifications=Notifications
+openInBrowser=Open in browser
 passwd=Password:
 paste=Paste
 previous=Previous
