new i18n strings added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@655 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -1,6 +1,9 @@
+account=Account
 accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
+add=Add
 addContact=Add contact
+addContactWizard=In the field below enter the identifier of the contact you would like to add.
 addSubcontact=Add subcontact
 all=All
 alwaysOnTop=Always on top
@@ -35,6 +38,7 @@ exit=Exit
 extendedCriteria=Extended criteria
 general=General
 generalError=General error
+group=Group
 file=File
 first=First
 font=Font
@@ -69,8 +73,16 @@ reconnectionLimitExceeded=You have have been disconnecting and reconnecting to t
 remove=Remove
 removeContact=Remove contact
 renameContact=Rename contact
+request=Request
+requestAuthorization=Request authorization
+requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her.
+requestAuthReason=Enter request reason
 save=Save
 search=Search
+selectGroupWizard=The list below contains all groups in your Contact List. Select these one, where you would like to add the new contact.
+selectGroupWizardTitle=Select group(s)
+selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
+selectProvidersWizardTitle=Select account(s)
 send=Send
 sendFile=Send file
 sendMessage=Send message
