--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -3,6 +3,8 @@ accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
 add=Add
 addContact=Add contact
+addContactError=Failed to find contact with id: ?
+addContactErrorTitle=Add contact Warning
 addContactWizard=In the field below enter the identifier of the contact you would like to add.
 addSubcontact=Add subcontact
 all=All
@@ -45,6 +47,7 @@ font=Font
 help=Help
 history=History
 hour=Hour
+identifier=Identifier
 insertSmiley=Insert smiley
 last=Last
 launchOnStartUp=Launch on start up
@@ -58,6 +61,7 @@ msgSendConnectionProblem=The message you are trying to send could not be deliver
 multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected. 
 networkFailure=Network failure
 next=Next
+newName=New name:
 no=No
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The ? server does not recognize specified user id.
@@ -72,6 +76,7 @@ quit=Quit
 reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again. 
 remove=Remove
 removeContact=Remove contact
+rename=Rename
 renameContact=Rename contact
 request=Request
 requestAuthorization=Request authorization
