new i18n strings added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@700 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -7,7 +7,7 @@ addContactError=Failed to find contact with id: ?
 addContactErrorTitle=Add contact Warning
 addContactWizard=In the field below enter the identifier of the contact you would like to add.
 addSubcontact=Add subcontact
-all=All
+allContacts=All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
