rename contact dialog changed to show an icon
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@704 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -78,12 +78,15 @@ remove=Remove
 removeContact=Remove contact
 rename=Rename
 renameContact=Rename contact
+renameContactWizard=In the field below you can specify the name you would like to use for the given contact.
 request=Request
 requestAuthorization=Request authorization
 requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her.
 requestAuthReason=Enter request reason
 save=Save
 search=Search
+selectAccount=Select account
+selectGroup=Select group
 selectGroupWizard=The list below contains all groups in your Contact List. Select these one, where you would like to add the new contact.
 selectGroupWizardTitle=Select group(s)
 selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
