new i18n message added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@813 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/main/i18n/messages.properties
@@ -50,6 +50,7 @@ hour=Hour
 identifier=Identifier
 insertSmiley=Insert smiley
 last=Last
+launchBrowserError=Error attempting to launch web browser
 launchOnStartUp=Launch on start up
 limitReachedForIp=You have too many existing registrations from the local IP address and the ? server doesn't allow to open any more of them.
 login=Login
