--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -1,17 +1,20 @@
 account=Account
+accountRegistrationWizard=Account Registration Wizard
 accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
 add=Add
 addContact=Add contact
 addContactError=Failed to find contact with id: ?
 addContactErrorTitle=Add contact Warning
-addContactWizard=In the field below enter the identifier of the contact you would like to add.
+addContactIdentifier=In the field below enter the identifier of the contact you would like to add.
+addContactWizard=Add contact wizard
 addSubcontact=Add subcontact
 allContacts=All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
-authenticationFailed=Authentication failed. The password you entered is not valid. 
+authenticationFailed=Authentication failed. The password you entered is not valid.
+back=Back 
 call=Call
 callList=Call list
 cancel=Cancel
@@ -30,6 +33,7 @@ copy=Copy
 copyLink=Copy link
 cut=Cut
 date=Date
+description=Description
 dial=Dial
 doNotAskAgain=Don't ask again
 edit=Edit
@@ -42,6 +46,7 @@ general=General
 generalError=General error
 group=Group
 file=File
+finish=Finish
 first=First
 font=Font
 help=Help
@@ -55,13 +60,16 @@ launchOnStartUp=Launch on start up
 limitReachedForIp=You have too many existing registrations from the local IP address and the ? server doesn't allow to open any more of them.
 login=Login
 loginWindowTitle=Login ?
+modify=Modify
 moveToGroup=Move to group
 msgDeliveryFailure=Message delivery failure
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
 msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline. Check your network connection.
-multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected. 
+multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected.
+name=Name 
 networkFailure=Network failure
 next=Next
+new=New
 newName=New name:
 no=No
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
