Configuration Dialog title and position on the screen
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@873 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -21,6 +21,7 @@ cancel=Cancel
 close=Close
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 configure=Configure
+configurations=Configurations
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
 connectionExpiredMessage=You are currently disconnected from the ? server.
