new i18n string added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@923 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -96,6 +96,7 @@ requestAuthReason=Enter request reason
 save=Save
 search=Search
 selectAccount=Select account
+selectAccountRegistration=Select the account registration wizard to use for creating a new account.
 selectGroup=Select group
 selectGroupWizard=The list below contains all groups in your Contact List. Select these one, where you would like to add the new contact.
 selectGroupWizardTitle=Select group(s)
