--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -85,6 +85,8 @@ protocol=Protocol
 quit=Quit
 reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again. 
 remove=Remove
+removeAccount=Remove account
+removeAccountMessage=Are you sure you want to remove this account?
 removeContact=Remove contact
 rename=Rename
 renameContact=Rename contact
