Authorization Handler implementation moved in another package within the gui; all cases implemented
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@934 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -1,3 +1,4 @@
+accept=Accept
 account=Account
 accountRegistrationWizard=Account Registration Wizard
 accounts=Accounts
@@ -13,7 +14,12 @@ allContacts=All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
+authAccepted=The ? contact has accepted your authorization request.
+authRejected=The ? contact has rejected your authorization request.
+authorizationRequested=Authorization requested
+authorizationRequestedInfo=The ? contact requests your authorization.
 authenticationFailed=Authentication failed. The password you entered is not valid.
+authorizationResponse=Authorization response
 back=Back 
 call=Call
 callList=Call list
@@ -54,6 +60,7 @@ help=Help
 history=History
 hour=Hour
 identifier=Identifier
+ignore=Ignore
 insertSmiley=Insert smiley
 last=Last
 launchBrowserError=Error attempting to launch web browser
@@ -76,6 +83,7 @@ no=No
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The ? server does not recognize specified user id.
 notifications=Notifications
+ok=OK
 openInBrowser=Open in browser
 passwd=Password:
 paste=Paste
@@ -83,7 +91,8 @@ previous=Previous
 print=Print
 protocol=Protocol
 quit=Quit
-reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again. 
+reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again.
+reject=Reject
 remove=Remove
 removeAccount=Remove account
 removeAccountMessage=Are you sure you want to remove this account?
@@ -94,7 +103,9 @@ renameContactWizard=In the field below you can specify the name you would like t
 request=Request
 requestAuthorization=Request authorization
 requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her.
-requestAuthReason=Enter request reason
+requestAuthReason=Request reason
+requestAuthReasonEnter=Enter request reason
+responseAuthReasonEnter=Enter response reason
 save=Save
 search=Search
 selectAccount=Select account
