--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -15,6 +15,7 @@ alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
 authAccepted=The ? contact has accepted your authorization request.
+authenticationWindowTitle=Authentication requested
 authRejected=The ? contact has rejected your authorization request.
 authorizationRequested=Authorization requested
 authorizationRequestedInfo=The ? contact requests your authorization.
@@ -108,6 +109,7 @@ requestAuthReasonEnter=Enter request reason
 responseAuthReasonEnter=Enter response reason
 save=Save
 search=Search
+securityAuthorityRealm=The ? server has requested your authentication. 
 selectAccount=Select account
 selectAccountRegistration=Select the account registration wizard to use for creating a new account.
 selectGroup=Select group
