No account found page in the account registration wizard
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@954 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -112,7 +112,8 @@ save=Save
 search=Search
 securityAuthorityRealm=The ? server has requested your authentication. 
 selectAccount=Select account
-selectAccountRegistration=Select the account registration wizard to use for creating a new account.
+selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
+selectAccountRegWizardTitle=Select account registration
 selectGroup=Select group
 selectGroupWizard=The list below contains all groups in your Contact List. Select these one, where you would like to add the new contact.
 selectGroupWizardTitle=Select group(s)
@@ -126,6 +127,7 @@ showOfflineUsers=Show offline users
 sipCommunicator=SIPCommunicator
 statusChangeGeneralError=The status could not be changed due to a general application error.
 statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
+summary=Summary
 today=Today
 tools=Tools
 typingNotifications=Typing notifications
