--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -128,6 +128,7 @@ sendMessage=Send message
 settings=Settings
 showOfflineUsers=Show offline users
 sipCommunicator=SIPCommunicator
+statusChangedChatMessage=has become ?
 statusChangeGeneralError=The status could not be changed due to a general application error.
 statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
 summary=Summary
