message text changed
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1145 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -30,7 +30,7 @@ closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Ar
 configure=Configure
 configurations=Configurations
 connectionFailed=Connection failed
-connectionFailedMessage=The connection could not be established due to a network \n connection problem. Please check your network configuration.
+connectionFailedMessage=The connection could not be established due to a network \n problem. Please check your network configuration.
 connectionExpiredMessage=You are currently disconnected from the ? server.
 contactPausedTyping=? paused typing the message
 contactTyping=? is typing a message
@@ -125,7 +125,7 @@ selectProvidersWizard=The list below contains all registered accounts. Select th
 selectProvidersWizardTitle=Select account(s)
 send=Send
 sendFile=Send file
-sendMessage=Send message
+sendMessage=Send a message
 settings=Settings
 showOfflineUsers=Show offline users
 sipCommunicator=SIPCommunicator
