In the chat window replace the month with its abbreviation.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1150 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -152,3 +152,15 @@ mnemonic.tools=T
 mnemonic.settings=S
 mnemonic.help=H
 
+january=Jan
+february=Feb
+march=Mar
+april=Apr
+may=May
+june=Jun
+july=Jul
+august=Aug
+september=Sep
+october=Oct
+november=Nov
+december=Dec
