History Window - progress bar problems - work in progress
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1177 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -95,6 +95,7 @@ previous=Previous
 print=Print
 protocol=Protocol
 quit=Quit
+ready=Ready
 reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again.
 refresh=Refresh
 reject=Reject
