Mnemonic keys for all menus;Chat window menu mnemonics;Chat Window Popup Menus mnemonics
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1190 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -152,6 +152,42 @@ mnemonic.file=F
 mnemonic.tools=T
 mnemonic.settings=S
 mnemonic.help=H
+mnemonic.edit=E
+mnemonic.chatSettings=T
+
+mnemonic.exit=X
+mnemonic.continue=C
+
+mnemonic.sendMessage=S
+mnemonic.sendFile=E
+mnemonic.moveTo=M
+mnemonic.addSubcontact=A
+mnemonic.removeContact=R
+mnemonic.renameContact=N
+mnemonic.viewHistory=V
+mnemonic.userInfo=U
+
+mnemonic.save=S
+mnemonic.print=P
+mnemonic.close=O
+mnemonic.cut=T
+mnemonic.copy=C
+
+mnemonic.paste=P
+
+mnemonic.typingNotifications=T
+
+mnemonic.back=B
+mnemonic.next=N
+mnemonic.cancel=C
+
+mnemonic.newAccount=N
+mnemonic.modifyAccount=M
+mnemonic.removeAccount=R
+
+mnemonic.renameContactButton=R
+
+mnemonic.search=S
 
 january=Jan
 february=Feb
