authorization messages changed
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1226 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -14,9 +14,9 @@ allContacts=All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
-authAccepted=The ? contact has accepted your authorization request.
+authAccepted=contact has accepted your authorization request.
 authenticationWindowTitle=Authentication requested
-authRejected=The ? contact has rejected your authorization request.
+authRejected=contact has rejected your authorization request.
 authorizationRequested=Authorization requested
 authorizationRequestedInfo=The ? contact requests your authorization.
 authenticationFailed=Authentication failed. The password you entered is not valid.
@@ -109,7 +109,7 @@ renameContact=Rename contact
 renameContactWizard=In the field below you can specify the name you would like to use for the given contact.
 request=Request
 requestAuthorization=Request authorization
-requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her.
+requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her. Please enter your request below.
 requestAuthReason=Request reason
 requestAuthReasonEnter=Enter request reason
 responseAuthReasonEnter=Enter response reason
@@ -188,6 +188,12 @@ mnemonic.removeAccount=R
 mnemonic.renameContactButton=R
 
 mnemonic.search=S
+
+mnemonic.acceptButton=A
+mnemonic.rejectButton=R
+mnemonic.ignoreButton=I
+
+mnemonic.requestButton=R
 
 january=Jan
 february=Feb
